Use `URLDecode.decode()` that is compatible with pre Java 10 versions (#1505)
Use URLDecode.decode() that is compatible with pre Java 10 versions